@@ -44,6 +44,9 @@ class wxTopLevelWindowPtr(wxWindowPtr):
     def SetIcon(self, *_args, **_kwargs):
         val = apply(framesc.wxTopLevelWindow_SetIcon,(self,) + _args, _kwargs)
         return val
+    def SetIcons(self, *_args, **_kwargs):
+        val = apply(framesc.wxTopLevelWindow_SetIcons,(self,) + _args, _kwargs)
+        return val
     def ShowFullScreen(self, *_args, **_kwargs):
         val = apply(framesc.wxTopLevelWindow_ShowFullScreen,(self,) + _args, _kwargs)
         return val
