@@ -70,6 +70,9 @@ UNICODE!
 
 Added wxListCtrlAutoWidthMixin from Erik Westra.
 
+Added wxIconBundle and wxTopLevelWindow.SetIcons.
+
+
 
 
 2.3.2.1
